--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/README.mustache
@@ -4,7 +4,7 @@ title: Node / Javascript SDK
 ---
 
 :::caution
-The SDK code and documetnation are in ALPHA state and are under heavy development. As a result, the apis are still in
+The SDK code and documentation are in ALPHA state and are under heavy development. As a result, the apis are still in
 flux, and the documentation may be out of date with the code.
 :::
 
