--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/build.gradle.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/build.gradle.mustache
@@ -2,12 +2,12 @@ group '{{groupId}}'
 version '{{artifactVersion}}'
 
 wrapper {
-    gradleVersion = '4.9'
+    gradleVersion = '6.6.1'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.4.10'
     {{#jvm-retrofit2}}
     ext.retrofitVersion = '2.6.2'
     {{/jvm-retrofit2}}
@@ -73,6 +73,7 @@ dependencies {
     {{/modeCodeGen}}
     {{/moshi}}
     compile "com.squareup.okhttp3:okhttp:3.12.6"
+    compile "com.squareup.okhttp3:logging-interceptor:3.12.6"
     {{/jvm-okhttp3}}
     {{#jvm-okhttp4}}
     {{^moshi}}
@@ -84,6 +85,7 @@ dependencies {
     {{/modeCodeGen}}
     {{/moshi}}
     compile "com.squareup.okhttp3:okhttp:4.2.2"
+    compile "com.squareup.okhttp3:logging-interceptor:4.2.2"
     {{/jvm-okhttp4}}
     {{#threetenbp}}
     compile "org.threeten:threetenbp:1.4.0"
