--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/data_class.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/data_class.mustache
@@ -64,7 +64,7 @@ import java.io.Serializable
     * Values: {{#allowableValues}}{{#enumVars}}{{&name}}{{^-last}},{{/-last}}{{/enumVars}}{{/allowableValues}}
     */
     {{#multiplatform}}@Serializable(with = {{nameInCamelCase}}.Serializer::class){{/multiplatform}}
-    {{#nonPublicApi}}internal {{/nonPublicApi}}enum class {{{nameInCamelCase}}}(val value: {{^isContainer}}{{dataType}}{{/isContainer}}{{#isContainer}}kotlin.String{{/isContainer}}){
+    {{#nonPublicApi}}internal {{/nonPublicApi}}enum class {{{nameInCamelCase}}}(val value: {{^isContainer}}{{dataType}}{{/isContainer}}{{#isContainer}}String{{/isContainer}}){
     {{#allowableValues}}
     {{#enumVars}}
         {{^multiplatform}}
