Override some fields in generated package.json
..for ergonomic publishing to npm

--- a/yatdocs-plugin/sdk_generator/templates/openapi-generator_javascript/package.mustache
+++ b/yatdocs-plugin/sdk_generator/templates/openapi-generator_javascript/package.mustache
@@ -1,8 +1,8 @@
 {
-  "name": "{{{projectName}}}",
+  "name": "yatjs",
   "version": "{{{projectVersion}}}",
-  "description": "{{{projectDescription}}}",
-  "license": "{{licenseName}}",
+  "description": "Bindings for the Yat API for javascript",
+  "license": "BSD-3",
   "main": "dist{{#invokerPackage}}/{{invokerPackage}}{{/invokerPackage}}/index.js",
   "scripts": {
     "build": "babel src -d dist",
