Updated homepage image and link

--- a/yat-docs/src/css/custom.css
+++ b/yat-docs/src/css/custom.css
@@ -145,6 +145,10 @@ code {
 .yatBtn:hover {
 	color: #FFF;
 }
+.yatHomeLink {
+  color: #7F8599;
+  font-weight: bold;
+}
 /* Mobile */
 @media (max-width: 996px){
 .yatHome {
