Updated templates for API and YatLib files and docs.
- Updated templates used in API and YatLib documentations.
- Updated OpenAPI generator logic to generate code in the more modern way.
- Removed unused files.

--- a/yatdocs-plugin/sdk_generator/templates/openapi-generator_swift5/model_doc.mustache
+++ b/yatdocs-plugin/sdk_generator/templates/openapi-generator_swift5/model_doc.mustache
@@ -1,11 +1,13 @@
-{{#models}}{{#model}}# {{classname}}
+{{#models}}
+{{#model}}
+# {{classname}}
 
 ## Properties
 Name | Type | Description | Notes
 ------------ | ------------- | ------------- | -------------
-{{#vars}}**{{name}}** | {{#isPrimitiveType}}**{{{dataType}}}**{{/isPrimitiveType}}{{^isPrimitiveType}}{{^isContainer}}[**{{dataType}}**]({{complexType}}.md){{/isContainer}}{{#isContainer}}{{{dataType}}}{{/isContainer}}{{/isPrimitiveType}} | {{description}} | {{^required}}[optional] {{/required}}{{#isReadOnly}}[readonly] {{/isReadOnly}}{{#defaultValue}}[default to {{{.}}}]{{/defaultValue}}
+{{#vars}}**{{name}}** | {{#isPrimitiveType}}**{{{dataType}}}{{^required}}?{{/required}}**{{/isPrimitiveType}}{{^isPrimitiveType}}{{^isContainer}}[**{{dataType}}**]{{^required}}?{{/required}}({{complexType}}.md){{/isContainer}}{{#isContainer}}{{{dataType}}}{{^required}}?{{/required}}{{/isContainer}}{{/isPrimitiveType}} | {{description}} | {{^required}}[optional] {{/required}}{{#isReadOnly}}[readonly] {{/isReadOnly}}{{#defaultValue}}[default to {{{.}}}]{{/defaultValue}}
 {{/vars}}
 
 [[Back to Model list]](../index.md#documentation-for-models) [[Back to API list]](../index.md#documentation-for-api-endpoints) [[Back to Index]](../index.md)
-
-{{/model}}{{/models}}
+{{/model}}
+{{/models}}
